--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 :root {
+    --chatsy-white: #ffffff;
     --chatsy-dark: #171717;
     --chatsy-light: #fafafa;
     --chatsy-orange-dark: #dd7a29;
@@ -73,6 +74,7 @@ html.dark {
     --color-chatsy-navbar-border: var(--chatsy-navbar-border);
     --color-chatsy-orange: var(--chatsy-orange);
 
+    --text-chatsy-text-xs: 0.75rem;
     --text-chatsy-text-2xs: 0.6rem;
     --chatsy-black-icon-invert: var(--chatsy-black-icon-invert);
     --chatsy-white-icon-invert: var(--chatsy-white-icon-invert);
@@ -96,6 +98,32 @@ html.dark {
 
 #__next {
     height: 100vh;
+}
+
+.to-message-container::after {
+    content: "";
+    position: absolute;
+    width: 1rem;
+    height: 0.5rem;
+    border: 1rem solid transparent;
+    border-left: 0.25rem transparent;
+    border-top: 0.5rem solid var(--chatsy-orange);
+    left: calc(100% - 0.25rem);
+    z-index: 1000;
+    top: 0;
+}
+
+.from-message-container::after {
+    content: "";
+    position: absolute;
+    width: 1rem;
+    height: 0.5rem;
+    border: 1rem solid transparent;
+    border-right: 0.25rem transparent;
+    border-top: 0.5rem solid var(--chatsy-white);
+    right: calc(100% - 0.25rem);
+    z-index: 1000;
+    top: 0;
 }
 
 ::-webkit-scrollbar {
