--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,10 +10,8 @@
 
     --chatsy-dark-secondary: #1a1a1a;
     --chatsy-light-secondary: #fdfdfd;
-    /* 262a2f */
 
-
-    --chatsy-light-tertiary: #f4f4f4;
+    --chatsy-light-tertiary: #efefef;
     --chatsy-dark-tertiary: #282828;
 
 
@@ -67,6 +65,7 @@ html.dark {
     --color-chatsy-secondary-bg: var(--chatsy-secondary-bg);
     --color-chatsy-tertiary-bg: var(--chatsy-tertiary-bg);
     --color-chatsy-text-main: var(--chatsy-text-main);
+    --color-chatsy-text-light: var(--chatsy-light);
     --color-chatsy-text-dark: var(--chatsy-dark);
     --color-chatsy-action-bg: var(--chatsy-action-bg);
     --color-chatsy-action-text: var(--chatsy-action-text);
@@ -120,7 +119,7 @@ html.dark {
     height: 0.5rem;
     border: 1rem solid transparent;
     border-right: 0.25rem transparent;
-    border-top: 0.5rem solid var(--chatsy-white);
+    border-top: 0.5rem solid var(--chatsy-light);
     right: calc(100% - 0.25rem);
     z-index: 1000;
     top: 0;
