--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,12 +125,12 @@ html.dark {
     top: 0;
 }
 
-::-webkit-scrollbar {
-    width: 6px;
+*::-webkit-scrollbar {
+    width: 3px;
     padding: 0 1px;
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: darkgray;
     border-radius: 10px;
     width: 4px;
